--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,10 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"cors": "^2.8.5",
+		"apollo-server-express": "^2.16.1",
 		"express": "^4.17.1",
-		"express-graphql": "^0.9.0",
-		"graphql": "^14.5.8"
+		"sequelize": "^6.3.4",
+		"sqlite3": "^5.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.2",
