--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"apollo-datasource": "^0.7.2",
 		"apollo-server-express": "^2.16.1",
 		"express": "^4.17.1",
 		"sequelize": "^6.3.4",
