--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
 		"apollo-datasource": "^0.7.2",
 		"apollo-server-express": "^2.16.1",
 		"express": "^4.17.1",
+		"mysql2": "^2.1.0",
 		"sequelize": "^6.3.4",
 		"sqlite3": "^5.0.0"
 	},
